--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.klinkerapps:wearable-reply:1.0.1'
     implementation "com.google.android.gms:play-services-wearable:${versions.playServices}"
 
-    implementation "com.google.android.support:wearable:2.5.0"
+    implementation "com.google.android.support:wearable:2.7.0"
     implementation "androidx.wear:wear:${versions.androidX}"
 
     testImplementation 'junit:junit:4.12'
