--- a/build.gradle
+++ b/build.gradle
@@ -38,18 +38,18 @@ buildscript {
             'kotlin'            : '1.3.72',
 
             'playServices'      : '17.0.0',
-            'glide'             : '4.10.0',
-            'retrofit'          : '2.5.0',
+            'glide'             : '4.11.0',
+            'retrofit'          : '2.7.2',
 
             'androidX'          : '1.0.0',
-            'androidXExif'      : '1.1.0',
+            'androidXExif'      : '1.2.0',
             'androidXTester'    : '1.1.0',
             'androidXEspresso'  : '3.1.0',
 
-            'firebaseCore'      : '17.2.1',
-            'firebaseMessaging' : '20.1.0',
-            'firebaseStorage'   : '19.1.0',
-            'firebaseAuth'      : '19.2.0',
+            'firebaseAnalytics' : '17.4.3',
+            'firebaseMessaging' : '20.2.0',
+            'firebaseStorage'   : '19.1.1',
+            'firebaseAuth'      : '19.3.1',
 
             'mockito'           : '2.18.3',
             'robolectric'       : '4.2',
@@ -61,14 +61,13 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
-        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradlePlugin}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath 'com.google.gms:google-services:4.3.3'
-        classpath 'io.fabric.tools:gradle:1.31.2'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.1.1'
     }
 
 }
