--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -30,21 +30,21 @@ dependencies {
 
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
 
-    api "androidx.core:core-ktx:1.2.0"
+    api "androidx.core:core-ktx:1.3.0"
     api "androidx.appcompat:appcompat:1.1.0"
     api "androidx.emoji:emoji:${versions.androidX}"
     api "androidx.annotation:annotation:${versions.androidX}"
     api "com.google.android.material:material:1.1.0"
     api "androidx.palette:palette:${versions.androidX}"
-    api "androidx.preference:preference:1.1.0"
+    api "androidx.preference:preference:1.1.1"
     api "androidx.leanback:leanback:${versions.androidX}"
     api "androidx.percentlayout:percentlayout:${versions.androidX}"
     api "androidx.browser:browser:1.2.0"
     api "androidx.exifinterface:exifinterface:${versions.androidXExif}"
-    api 'androidx.sharetarget:sharetarget:1.0.0-rc01'
+    api 'androidx.sharetarget:sharetarget:1.0.0'
 
-    api('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') { transitive = true }
-    api "com.google.firebase:firebase-core:${versions.firebaseCore}"
+    api 'com.google.firebase:firebase-crashlytics:17.0.1'
+    api "com.google.firebase:firebase-analytics:${versions.firebaseAnalytics}"
     api "com.google.firebase:firebase-auth:${versions.firebaseAuth}"
     api "com.google.android.gms:play-services-maps:${versions.playServices}"
 
