--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -30,9 +30,9 @@ dependencies {
 
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
 
-    api "androidx.core:core-ktx:1.3.0"
+    api "androidx.core:core-ktx:1.3.1"
     api "androidx.appcompat:appcompat:1.3.0-alpha01"
-    api "androidx.emoji:emoji:${versions.androidX}"
+    api "androidx.emoji:emoji:1.1.0"
     api "androidx.annotation:annotation:${versions.androidX}"
     api "com.google.android.material:material:1.1.0"
     api "androidx.palette:palette:${versions.androidX}"
@@ -43,7 +43,7 @@ dependencies {
     api "androidx.exifinterface:exifinterface:${versions.androidXExif}"
     api 'androidx.sharetarget:sharetarget:1.0.0'
 
-    api 'com.google.firebase:firebase-crashlytics:17.0.1'
+    api 'com.google.firebase:firebase-crashlytics:17.1.1'
     api "com.google.firebase:firebase-analytics:${versions.firebaseAnalytics}"
     api "com.google.firebase:firebase-auth:${versions.firebaseAuth}"
     api "com.google.android.gms:play-services-maps:${versions.playServices}"
