--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ buildscript {
     ]
 
     ext.versions = [
-            'gradlePlugin'      : '4.0.0',
+            'gradlePlugin'      : '4.0.1',
             'targetSdk'         : 29,
             'minSdk'            : 21,
 
@@ -67,7 +67,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:${versions.gradlePlugin}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath 'com.google.gms:google-services:4.3.3'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.1.1'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
     }
 
 }
@@ -78,11 +78,11 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url "https://maven.google.com" }
-        maven { url "https://dl.bintray.com/drummer-aidan/maven" }
-        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url "https://jitpack.io" }
+        maven { url "https://dl.bintray.com/drummer-aidan/maven" }
+        maven { url "https://dl.bintray.com/sensor-tower/android-usage" }
         maven { url "https://dl.bintray.com/mockito/maven" }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         flatDir { dirs "$rootProject.projectDir/shared/libs" }
     }
 
