push rating conversion events to firebase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     implementation 'io.fotoapparat:fotoapparat:2.6.1'
     implementation 'androidx.biometric:biometric:1.0.1'
+    implementation 'com.sensortower.usage:event-emitter-lib:1.0.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:${versions.robolectric}"
